timeline_list.js, busybird.css: prevent word-wrap inside "level : unacked_count" pairs, for improved visibility.

--- a/share/www/static/busybird.css
+++ b/share/www/static/busybird.css
@@ -72,7 +72,8 @@ div.bb-status-attributes {
 }
 
 .bb-unacked-counts-pair {
-    margin: 0 10px;
+    margin: 0 5px;
+    white-space: nowrap;
 }
 
 /****
